--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ django-jsonfield-compat==0.4.4
 numpy==1.13.3
 django-geonode-client==1.0.9
 dj-database-url==0.4.2
-celery[redis]==3.1.18
+#celery[redis]==3.1.18
 django-storages==1.6.5
 boto==2.48.0
 waitress==0.9.0
@@ -31,6 +31,8 @@ django-flat-theme==1.1.4
 flake8==3.5.0
 social-auth-app-django==1.2.0
 mock==2.0.0
-Django==1.8.18
+# Django==1.8.18
 six==1.10.0
 cryptography==2.3
+elasticsearch==6.3.0
+elasticsearch-dsl==6.1.0
