--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ SITEURL=http://localhost/
 ES_URL=http://search:9200/
 ES_SEARCH=True
 LOCKDOWN_GEONODE=True
+CARTOVIEW_ENABLED=False
 BROKER_URL=amqp://guest:guest@task_queue:5672/
 DATABASE_URL=postgres://exchange:boundless@db:5432/exchange?currentSchema=django,public
 POSTGIS_URL=postgis://exchange:boundless@db:5432/exchange_data?currentSchema=data,public
