--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "vendor/geonode"]
 	path = vendor/geonode
-	url = git@github.com:boundlessgeo/geonode.git
-	branch = exchange/1.4.x
+	url = https://github.com/cartologic/geonode.git
+	branch = 2.8.x
 [submodule "vendor/maploom"]
 	path = vendor/maploom
 	url = git@github.com:boundlessgeo/MapLoom.git
@@ -10,17 +10,19 @@
 	url = git@github.com:boundlessgeo/sphinx-theme.git
 [submodule "vendor/django-osgeo-importer"]
 	path = vendor/django-osgeo-importer
-	url = git@github.com:GeoNode/django-osgeo-importer.git
-	branch = angular-1.6
+	url = https://github.com/cartologic/django-osgeo-importer
+	branch = angular-1.4
 [submodule "vendor/gsconfig"]
 	path = vendor/gsconfig
 	url = git@github.com:boundlessgeo/gsconfig.git
 [submodule "vendor/geonode-elasticsearch"]
 	path = vendor/geonode-elasticsearch
 	url = git@github.com:boundlessgeo/geonode-elasticsearch.git
+	branch = geonode2.8.x
 [submodule "vendor/docker"]
 	path = vendor/docker
 	url = git@github.com:boundlessgeo/docker.git
+	branch = geonode-2.8.x
 [submodule "vendor/exchange-mobile-extension"]
 	path = vendor/exchange-mobile-extension
 	url = git@github.com:boundlessgeo/exchange-mobile-extension.git
