--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - exchange
   exchange:
     container_name: exchange
-    env_file: ./env/exchange.env
+    env_file: ./docker-env/exchange.env
     image: bex/exchange:latest
     build:
       context: .
@@ -52,7 +52,7 @@ services:
     volumes:
       - "geoserver-data-dir:/geoserver_data"
     env_file:
-      - ./env/geoserver.env
+      - ./docker-env/geoserver.env
   db:
     container_name: db
     build: ./docker/postgis
