--- a/docker-env/exchange.env
+++ b/docker-env/exchange.env
@@ -1,6 +1,6 @@
 #exchange
 DEV=True
-ALLOWED_HOSTS=["'*'"]
+ALLOWED_HOSTS=['*']
 MEDIA_ROOT=/app/data/media
 STATIC_ROOT=/tmp/static
 SITEURL=http://nginx.boundless.test/
