revert use cartoview/geoserver_docker instead of bex/geoserver

--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ GEOSERVER_URL=http://localhost/geoserver/
 GEOSERVER_LOCAL_URL=http://nginx/geoserver/
 GEOSERVER_DATA_DIR=/app/data/gs_data
 OSGEO_IMPORTER_UPLOAD_RASTER_TO_GEOSERVER=False
+CARTOVIEW_ENABLED=True
