set env CARTOVIEW_ENABLED to False
as it stops jenkins build

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ GEOSERVER_URL=http://nginx.boundless.test/geoserver/
 GEOSERVER_LOCAL_URL=http://nginx.boundless.test/geoserver/
 GEOSERVER_DATA_DIR=/app/data/gs_data
 OSGEO_IMPORTER_UPLOAD_RASTER_TO_GEOSERVER=False
-CARTOVIEW_ENABLED=True
+CARTOVIEW_ENABLED=False
 EXCHANGE_LOCAL_URL=http://localhost:8000
 SSL_PKI_ENABLED=True
 PROXY_BASEMAP=True
