--- a/.gitmodules
+++ b/.gitmodules
@@ -29,6 +29,7 @@
 [submodule "vendor/cartoview"]
 	path = vendor/cartoview
 	url = git@github.com:cartologic/cartoview.git
+	branch = 1.8.x
 [submodule "vendor/django-ssl-pki"]
 	path = vendor/django-ssl-pki
 	url = git@github.com:boundlessgeo/django-ssl-pki.git
