--- a/.gitmodules
+++ b/.gitmodules
@@ -26,10 +26,6 @@
 [submodule "vendor/exchange-mobile-extension"]
 	path = vendor/exchange-mobile-extension
 	url = git@github.com:boundlessgeo/exchange-mobile-extension.git
-[submodule "vendor/cartoview"]
-	path = vendor/cartoview
-	url = git@github.com:cartologic/cartoview.git
-	branch = 1.8.x
 [submodule "vendor/django-ssl-pki"]
 	path = vendor/django-ssl-pki
 	url = git@github.com:boundlessgeo/django-ssl-pki.git
@@ -37,3 +33,7 @@
 	path = vendor/arcrest
 	url = git@github.com:boundlessgeo/ArcREST.git
 	branch = ps/pki
+[submodule "vendor/cartoview"]
+	path = vendor/cartoview
+	url = https://github.com/cartologic/cartoview.git
+	branch = 1.8.x
