--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,7 @@ vendor/services
 exchange/static/docs
 
 # local test settings
-exchange/settings/local_settings.py
+local_settings.py
 
 # vscode
 .vscode
@@ -114,3 +114,6 @@ exchange/settings/local_settings.py
 exchange/apps
 
 uploaded
+*.sqlite3
+*.sqlite
+*.db
