--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 # -- FILE: pytest.ini (or tox.ini)
 [pytest]
-DJANGO_SETTINGS_MODULE = exchange.test_settings
+DJANGO_SETTINGS_MODULE = exchange.settings.test_settings
