--- a/.gitmodules
+++ b/.gitmodules
@@ -22,7 +22,7 @@
 [submodule "vendor/docker"]
 	path = vendor/docker
 	url = git@github.com:boundlessgeo/docker.git
-	branch = new2.8.x
+	branch = master
 [submodule "vendor/exchange-mobile-extension"]
 	path = vendor/exchange-mobile-extension
 	url = git@github.com:boundlessgeo/exchange-mobile-extension.git
