--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/geonode"]
 	path = vendor/geonode
-	url = https://github.com/cartologic/geonode.git
+	url = git@github.com:cartologic/geonode.git
 	branch = new2.8.x
 [submodule "vendor/maploom"]
 	path = vendor/maploom
