Add missing migration; Move geonode to boundless fork; update submodules

--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ GEOSERVER_LOCAL_URL=http://nginx.boundless.test/geoserver/
 GEOSERVER_DATA_DIR=/app/data/gs_data
 OSGEO_IMPORTER_UPLOAD_RASTER_TO_GEOSERVER=False
 CARTOVIEW_ENABLED=False
+CARTOVIEW_VERSION=1.8.2
 EXCHANGE_LOCAL_URL=http://localhost:8000
 SSL_PKI_ENABLED=True
 PROXY_BASEMAP=True
