--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ django-jsonfield==1.0.1
 django-jsonfield-compat==0.4.4
 numpy==1.13.3
 https://github.com/hishamkaram/geonode-client/raw/master/py_build/django_geonode_client-1.0.11-py2-none-any.whl
-dj-database-url==0.4.2
+dj-database-url==0.5.0
 django-storages==1.6.5
 boto==2.48.0
 waitress==0.9.0
@@ -22,30 +22,31 @@ django-cors-headers==1.3.1
 django-classification-banner==0.1.5
 django-solo==1.1.2
 django-colorfield==0.1.14
-psycopg2==2.7.3.2
+psycopg2==2.7.7
 python-ldap==2.5.2
 django-auth-ldap==1.3.0
-GDAL==2.1.0
-supervisor==3.3.3
+GDAL==2.4.0
+supervisor==3.3.5
 supervisor-stdout==0.1.1
 python-resize-image==1.1.11
 django-flat-theme==1.1.4
-flake8==3.5.0
+flake8==3.7.5
 social-auth-app-django==1.2.0
 mock==2.0.0
 six==1.10.0
-cryptography==2.3
-elasticsearch==6.3.0
-elasticsearch-dsl==6.1.0
+cryptography==2.5
+elasticsearch==6.3.1
+elasticsearch-dsl==6.3.1
 django-friendly-tag-loader==1.2.1
 urllib3==1.23
-regex==2018.11.03
+regex==2019.02.05
+certifi==2018.11.29
 
 # For pki app
 # should be with [secure] for pyOpenSSL, cryptography, etc. for modern SSL
 # urllib3[secure]==1.22
 # minimum of requests 2.12 needed, though not sure if it is urllib3-bug-free
-requests==2.20.0
+requests==2.21.0
 # more robust SSL in urllib3 with pyOpenSSL
 # pyOpenSSL==17.5.0
 # PKI component validations and db field encryption
