--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ DATABASE_URL=postgres://exchange:boundless@db:5432/exchange?currentSchema=django
 POSTGIS_URL=postgis://exchange:boundless@db:5432/exchange_data?currentSchema=data,public
 GEOSERVER_URL=http://nginx.boundless.test/geoserver/
 GEOSERVER_LOCAL_URL=http://nginx.boundless.test/geoserver/
+GEOFENCE_URL=http://nginx.boundless.test/geoserver/rest/geofence
 GEOSERVER_DATA_DIR=/app/data/gs_data
 OSGEO_IMPORTER_UPLOAD_RASTER_TO_GEOSERVER=False
 CARTOVIEW_ENABLED=False
