--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 [submodule "vendor/django-osgeo-importer"]
 	path = vendor/django-osgeo-importer
 	url = git@github.com:GeoNode/django-osgeo-importer.git
-	branch = master
+	branch = gsconfig-2-support
 [submodule "vendor/gsconfig"]
 	path = vendor/gsconfig
 	url = git@github.com:boundlessgeo/gsconfig.git
