--- a/.env
+++ b/.env
@@ -19,4 +19,4 @@ SSL_PKI_ENABLED=True
 PROXY_BASEMAP=True
 PKI_DIRECTORY=/code/exchange/tests/files/pki
 PROXY_URL=/proxy/?url=
-DISABLE_ANYWHERE=true
+ENABLE_ANYWHERE=false
