MoW settings added

--- a/.env
+++ b/.env
@@ -20,3 +20,4 @@ PROXY_BASEMAP=True
 PKI_DIRECTORY=/code/exchange/tests/files/pki
 PROXY_URL=/proxy/?url=
 ANYWHERE_ENABLED=false
+MOW_CLIENT_ENABLED=True
